--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.0'
     compile 'com.android.support:support-v13:22.2.1'
     compile 'com.android.support:design:22.2.1'
+    compile 'org.apache.commons:commons-lang3:3.4'
 }
