--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.scu.smartgrocerytracker.welcome.WelcomeMainActivity"
+            android:name=".welcome.WelcomeMainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,12 +17,22 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.scu.smartgrocerytracker.items.ItemListingActivity"
+            android:name=".items.ItemListingActivity"
             android:label="@string/title_activity_item_listing"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.scu.smartgrocerytracker.pantry.AddToPantryActivity"
+            android:name=".pantry.AddToPantryActivity"
             android:label="@string/title_activity_view_pantry_items"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <service
+            android:name=".pantry.ExpiryNotificationService"
+            android:exported="false" />
+
+        <activity android:name=".pantry.ExpiryNotificationActivity" />
+        <activity
+            android:name=".pantry.UpdatePantryActivity"
+            android:label="@string/title_activity_update_pantry"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
