--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.0"
-
+    useLibrary  'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.javarticles.tabs"
         minSdkVersion 16
@@ -25,4 +25,6 @@ dependencies {
     compile 'com.android.support:support-v13:22.2.1'
     compile 'com.android.support:design:22.2.1'
     compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+    compile 'org.apache.httpcomponents:httpclient:4.5'
 }
