--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,12 +21,17 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
@@ -38,15 +43,48 @@ android {
     }
 }
 
+//dependencies {
+//    compile 'com.firebase:firebase-client-android:2.0.3+'
+//    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile 'com.android.support:appcompat-v7:23.0.0'
+//    compile 'com.android.support:design:23.1.1'
+//    compile 'org.apache.commons:commons-lang3:3.4'
+//    compile 'org.apache.httpcomponents:httpcore:4.4.1'
+//    compile 'org.apache.httpcomponents:httpclient:4.5'
+//    compile 'com.facebook.android:facebook-android-sdk:4.1.0'
+//    compile 'com.google.android.gms:play-services:6.1+'
+//    compile 'com.google.android.gms:play-services:8.4.0'
+//    compile 'com.android.support:multidex:1.0.1'
+//    compile 'com.android.support:support-v13:23.1.0'
+//
+//}
+//compile 'com.google.android.gms:play-services-identity:8.4.0'
+//compile 'com.google.android.gms:play-services-maps:8.4.0'
+//compile 'com.google.android.gms:play-services-plus:8.4.0'
+//compile 'com.google.android.gms:play-services-location:8.4.0'
+//compile 'com.google.android.gms:play-services-nearby:8.4.0'
+
+
+
+
 dependencies {
-    compile 'com.firebase:firebase-client-android:2.0.3+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
-    compile 'com.android.support:support-v13:22.2.1'
-    compile 'com.android.support:design:22.2.1'
+    compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
+    compile 'com.android.support:support-v13:24.0.0-alpha1'
+    compile 'com.android.support:design:24.0.0-alpha1'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.httpcomponents:httpcore:4.4.1'
     compile 'org.apache.httpcomponents:httpclient:4.5'
     compile 'com.facebook.android:facebook-android-sdk:4.1.0'
-    compile 'com.google.android.gms:play-services:6.1+'
+
+    compile 'com.google.android.gms:play-services-identity:8.4.0'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
+    compile 'com.google.android.gms:play-services-plus:8.4.0'
+    compile 'com.google.android.gms:play-services-location:8.4.0'
+    compile 'com.google.android.gms:play-services-nearby:8.4.0'
 }
+
+
+
+
