--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAc1dJYxpC9ybqNhrZFUMMQRWd9fbpOSr8" />
+        <!--AIzaSyDPWagttLshhCvxCrQAW3uaOrlahXpSI_w-->
+
+        <activity android:name=".MapView"
+            android:label="Mapview"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+
+
         <activity
             android:name=".welcome.WelcomeMainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -50,6 +60,8 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
+
     </application>
 
 </manifest>
