--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,10 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
+        <activity
+            android:name=".Notes.NoteEdit"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustUnspecified"/>
 
     </application>
 
