--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
     buildToolsVersion "23.0.0"
     useLibrary  'org.apache.http.legacy'
     defaultConfig {
-        applicationId "com.javarticles.tabs"
+        applicationId "edu.scu.SmartGroceryTracker"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
@@ -43,36 +43,12 @@ android {
     }
 }
 
-//dependencies {
-//    compile 'com.firebase:firebase-client-android:2.0.3+'
-//    compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile 'com.android.support:appcompat-v7:23.0.0'
-//    compile 'com.android.support:design:23.1.1'
-//    compile 'org.apache.commons:commons-lang3:3.4'
-//    compile 'org.apache.httpcomponents:httpcore:4.4.1'
-//    compile 'org.apache.httpcomponents:httpclient:4.5'
-//    compile 'com.facebook.android:facebook-android-sdk:4.1.0'
-//    compile 'com.google.android.gms:play-services:6.1+'
-//    compile 'com.google.android.gms:play-services:8.4.0'
-//    compile 'com.android.support:multidex:1.0.1'
-//    compile 'com.android.support:support-v13:23.1.0'
-//
-//}
-//compile 'com.google.android.gms:play-services-identity:8.4.0'
-//compile 'com.google.android.gms:play-services-maps:8.4.0'
-//compile 'com.google.android.gms:play-services-plus:8.4.0'
-//compile 'com.google.android.gms:play-services-location:8.4.0'
-//compile 'com.google.android.gms:play-services-nearby:8.4.0'
-
-
-
-
 dependencies {
+    compile 'com.firebase:firebase-client-android:2.0.3+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.firebase:firebase-client-android:2.3.1'
-    compile 'com.android.support:appcompat-v7:24.0.0-alpha1'
-    compile 'com.android.support:support-v13:24.0.0-alpha1'
-    compile 'com.android.support:design:24.0.0-alpha1'
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:support-v13:23.1.1'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.httpcomponents:httpcore:4.4.1'
     compile 'org.apache.httpcomponents:httpclient:4.5'
@@ -83,8 +59,15 @@ dependencies {
     compile 'com.google.android.gms:play-services-plus:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.google.android.gms:play-services-nearby:8.4.0'
+
+    //Jackson library
+    //compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.0'
+
+    //google client api
+    compile 'com.google.api-client:google-api-client:1.19.1'
+
+    //jackson http
+    compile 'com.google.http-client:google-http-client-jackson:1.15.0-rc'
+
+
 }
-
-
-
-
