--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.scu.smartgrocerytracker">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".login.LoginDemoApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAc1dJYxpC9ybqNhrZFUMMQRWd9fbpOSr8" />
-        <!-- AIzaSyDPWagttLshhCvxCrQAW3uaOrlahXpSI_w -->
-
-        <activity
-            android:name=".MapView"
-            android:label="Mapview"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".welcome.WelcomeMainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
@@ -48,8 +39,7 @@
         <activity
             android:name=".pantry.UpdatePantryActivity"
             android:label="@string/title_activity_update_pantry"
-            android:theme="@style/AppTheme.NoActionBar" />
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -61,8 +51,16 @@
         <activity
             android:name=".Notes.NoteEdit"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustUnspecified"/>
-
+            android:windowSoftInputMode="adjustUnspecified" />
+        <activity
+            android:name=".location.PreferedLocationActivity"
+            />
+        <activity android:name=".location.SinglePlaceActivity" />
+        <activity
+            android:name=".location.PrefStoreActivity"
+            android:label="@string/title_activity_pref_store"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
