--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,9 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".historygrocery.historyy"></activity>
+        <activity android:name=".historygrocery.historyy">
+
+        </activity>
         <activity
             android:name=".Notes.NoteEdit"
             android:label="@string/app_name"
